welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:11: error: type RED is not a member of object java.awt.Color
def croix(c:Color.RED){
                  ^